force-app/main/default/objects/Ship__c/Ship__c.object-meta.xml
<CustomObject>
    <label>Ship</label>
    <nameField>
        <label>Ship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>