force-app/main/default/objects/Ship__c/fields/Current_position__c.field-meta.xml
<CustomField>
    <fullName>Current_position__c</fullName>
    <label>Current position</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>