force-app/main/default/objects/Ship__c/fields/Draught__c.field-meta.xml
<CustomField>
    <fullName>Draught__c</fullName>
    <inlineHelpText>please enter the value in meters</inlineHelpText>
    <label>Draught</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>