force-app/main/default/objects/Ship__c/fields/Ship_owner__c.field-meta.xml
<CustomField>
    <fullName>Ship_owner__c</fullName>
    <label>Ship Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Ship-owner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ships</relationshipLabel>
    <relationshipName>Ships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>