force-app/main/default/objects/Ship__c/fields/Total_TEU__c.field-meta.xml
<CustomField>
    <fullName>Total_TEU__c</fullName>
    <label>Total TEU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>