force-app/main/default/objects/Ship__c/listViews/List_of_ships.listView-meta.xml
<ListView>
    <fullName>List_of_ships</fullName>
    <columns>NAME</columns>
    <columns>Total_TEU__c</columns>
    <columns>Class__c</columns>
    <columns>Current_position__Latitude__s</columns>
    <columns>Current_position__Longitude__s</columns>
    <columns>Draught__c</columns>
    <columns>Ship_owner__c</columns>
    <filterScope>Mine</filterScope>
    <label>List of ships</label>
</ListView>